--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
 }
 
+/* setting up general elements to perseve style throughout website */
 body {
     background-color: #d9dcd6;
 }
@@ -20,6 +21,7 @@ h1 {
     font-size: 48px;
 }
 
+/* This is set to highlight a section to match the company logo */
 #seo {
     color: #d9dcd6;
 }
@@ -41,11 +43,6 @@ li {
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
 
 a {
     color: #ffffff;
@@ -56,7 +53,8 @@ p {
     font-size: 16px;
 }
 
-#hero {
+/* only used once style is id */
+#team-pic {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -65,6 +63,12 @@ p {
     background-position: center;
 }
 
+
+/* Main section attributes
+ - float styles
+ - main content style 
+ - article style attributes 
+*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -75,11 +79,15 @@ p {
     margin-left: 25px;
 }
 
+/* used once so set as an id */
+#content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
 
-
-/* combined the styles for the content media because the all match */
-.article-properties {
-
+/* combined settins for all articles in main */
+.main-article-properties {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -88,17 +96,16 @@ p {
     color: #ffffff;
 }
 
-/* need to specify img within class because footer also has h2 with different attribute*/
-.article-properties img {
+.main-article-properties img {
     max-height: 200px;   
 }
 
-/* need to specify h2 because footer also has h2 with different attribute*/
-.article-properties  h2 {
+.main-article-properties  h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
+/* benefits section attributes */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -125,57 +132,14 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.footer {
+/* Changed to an element from class */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
