--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ nav {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    height: auto;
 }
 
 ul {
